[package]
name = "npm-replicator-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#couch_rs = "0.9.0"
futures-core = "0.3.25"
futures-util = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
rusqlite = "0.28.0"
reqwest = { version = "0.11", features = ["json", "gzip"] }
parking_lot = "0.12.1"
anyhow = "1.0.66"
